# conda_package_verification

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  __main__.py  conda.yaml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
cpv/: cli.py  cpv_cli.py  main.py
cpv/core/: conda_management.py  env_file_management.py  imports_finder.py
package_verification/: .pre-commit-hooks.yaml
package_verification/core/: conda_management.py  env_file_management.py  imports_finder.py  package_management.py
package_verification/utils/: dicts.py
pydepcheck/: cli.py  main.py
pydepcheck/core/: conda_management.py  env_file_management.py  imports_finder.py
pydepcheck/utils/: utils.py
