[metadata]
name = conda-package-verification
version = 0.0.1
description = A tool to verify conda packages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jorgenusan/conda_package_verification
author = Jorge Núñez
author_email = jorge.nusan@gmail.com

[options]
packages = find:
python_requires = >=3.9
install_requires =
    pyyaml==6.0.1
    fire==0.6.0
    loguru==0.5.3
    pre-commit==3.7.0

[options.entry_points]
console_scripts =
    conda-package-verification = conda_package_verification.cli:main
