[metadata]
name = cpv
version = 0.1.0
description = Conda Package Verification
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jorgenusan/conda_package_verification
author = Jorge Núñez
author_email = jorge.nusan@gmail.com

[options]
packages = find:
python_requires = >=3.9
install_requires =
    pyyaml==6.0.1
    loguru==0.5.3
    pre-commit==3.7.0

[options.packages.find]
exclude =
    tests*
    build*

[options.entry_points]
console_scripts =
    cpv = cpv.main:main
